--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,17 +6,12 @@ on:
   pull_request:
 
 jobs:
-  test-native:
-    name: Test ${{ matrix.action }} action on ${{ matrix.os }}
+  test-site-gen-local:
+    name: Test ./site-gen/ action on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
-        action:
-        # - ./site-gen/
-        # - ./docker-site-gen/
-        - actions-mn/cli/site-gen@main
-        # - actions-mn/cli/site-gen@${{ github.head_ref }}
         os: [ ubuntu-latest, windows-latest, macos-latest ]
     steps:
     - uses: actions/checkout@v2
@@ -26,11 +21,92 @@ jobs:
         repository: metanorma/mn-samples-iso
         path: iso
 
-    - run: echo "${{ matrix.action }}"
+    - uses: actions-mn/setup@master
+
+    - uses: ./site-gen/
+      with:
+        source-path: iso
+        config-file: iso/metanorma.yml
+        agree-to-terms: true
+
+    - uses: andstor/file-existence-action@v1
+      with:
+        files: site/index.html
+
+  test-docker-site-gen-local:
+    name: Test ./docker-site-gen/ action on ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ ubuntu-latest, windows-latest, macos-latest ]
+    steps:
+    - uses: actions/checkout@v2
+
+    - uses: actions/checkout@v2
+      with:
+        repository: metanorma/mn-samples-iso
+        path: iso
 
     - uses: actions-mn/setup@master
 
-    - uses: ${{ matrix.action }}
+    - uses: ./docker-site-gen/
+      with:
+        source-path: iso
+        config-file: iso/metanorma.yml
+        agree-to-terms: true
+
+    - uses: andstor/file-existence-action@v1
+      with:
+        files: site/index.html
+
+  test-site-gen:
+    if: github.head_ref == 'main'
+    name: Test actions-mn/cli/site-gen@${{ github.head_ref }} action on ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ ubuntu-latest, windows-latest, macos-latest ]
+    steps:
+    - uses: actions/checkout@v2
+
+    - uses: actions/checkout@v2
+      with:
+        repository: metanorma/mn-samples-iso
+        path: iso
+
+    - uses: actions-mn/setup@master
+
+    - uses: actions-mn/cli/site-gen@main
+      with:
+        source-path: iso
+        config-file: iso/metanorma.yml
+        agree-to-terms: true
+
+    - uses: andstor/file-existence-action@v1
+      with:
+        files: site/index.html
+
+  test-docker-site-gen:
+    if: github.head_ref == 'main'
+    name: Test actions-mn/cli/docker-site-gen@${{ github.head_ref }} action on ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ ubuntu-latest, windows-latest, macos-latest ]
+    steps:
+    - uses: actions/checkout@v2
+
+    - uses: actions/checkout@v2
+      with:
+        repository: metanorma/mn-samples-iso
+        path: iso
+
+    - uses: actions-mn/setup@master
+
+    - uses: actions-mn/cli/docker-site-gen@main
       with:
         source-path: iso
         config-file: iso/metanorma.yml
