--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -78,7 +78,7 @@ jobs:
 
     - uses: actions-mn/setup@master
 
-    - uses: actions-mn/cli/site-gen@main
+    - uses: actions-mn/cli/site-gen@main # context expression cannot be used instead main
       with:
         source-path: iso
         config-file: iso/metanorma.yml
@@ -106,7 +106,7 @@ jobs:
 
     - uses: actions-mn/setup@master
 
-    - uses: actions-mn/cli/docker-site-gen@main
+    - uses: actions-mn/cli/docker-site-gen@main # context expression cannot be used instead main
       with:
         source-path: iso
         config-file: iso/metanorma.yml
@@ -133,6 +133,13 @@ jobs:
         type: iso
         doctype: international-standard
         output-path: test
+
+    - uses: ./new/
+      with:
+        type: iso
+        doctype: international-standard
+        template: https://github.com/metanorma/mn-templates-iso
+        output-path: test-git
 
     - uses: andstor/file-existence-action@v1
       with:
