Change defaukt docker image to metanorma/metanorma

--- a/docker-site-gen/action.yml
+++ b/docker-site-gen/action.yml
@@ -22,7 +22,7 @@ inputs:
 
 runs:
   using: "docker"
-  image: "docker://metanorma/mn:latest"
+  image: "docker://metanorma/mtanorma:latest"
   entrypoint: metanorma
   args:
     - site
