Fix secrets.github-packages-token access

--- a/setup-flavors/action.yml
+++ b/setup-flavors/action.yml
@@ -17,7 +17,7 @@ runs:
     - if: inputs.github-pakages-token != ""
       uses: metanorma/ci/gh-rubygems-setup-action@main
       with:
-        token: ${{ secrets.github-pakages-token }}
+        token: ${{ inputs.github-pakages-token }}
 
     - shell: python
       run: |
