--- a/setup-flavors/action.yml
+++ b/setup-flavors/action.yml
@@ -14,7 +14,7 @@ runs:
     - shell: bash
       run: apt-get update -y && apt-get install -y gcc g++ ruby-dev
 
-    - if: inputs.github-pakages-token != ""
+    - if: ${{ inputs.github-pakages-token != "" }}
       uses: metanorma/ci/gh-rubygems-setup-action@main
       with:
         token: ${{ inputs.github-pakages-token }}
