Remove actions that moved to separate repos

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,116 +10,6 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  test-site-gen-local:
-    name: Test ./site-gen/ action on ${{ matrix.os }}
-    runs-on: ${{ matrix.os }}
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [ ubuntu-latest, windows-latest, macos-latest ]
-    steps:
-    - uses: actions/checkout@v3
-
-    - uses: actions/checkout@v3
-      with:
-        repository: metanorma/mn-samples-iso
-        path: iso
-
-    - uses: actions-mn/setup@master
-
-    - uses: ./site-gen/
-      with:
-        source-path: iso
-        config-file: metanorma.yml
-        agree-to-terms: true
-
-    - uses: andstor/file-existence-action@v1
-      with:
-        files: site/index.html
-
-  test-docker-site-gen-local:
-    name: Test ./docker-site-gen/ action on ${{ matrix.os }}
-    runs-on: ${{ matrix.os }}
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [ ubuntu-latest ]
-    steps:
-    - uses: actions/checkout@v3
-
-    - uses: actions/checkout@v3
-      with:
-        repository: metanorma/mn-samples-iso
-        path: iso
-
-    - uses: actions-mn/setup@master
-
-    - uses: ./docker-site-gen/
-      with:
-        source-path: iso
-        config-file: iso/metanorma.yml
-        agree-to-terms: true
-
-    - uses: andstor/file-existence-action@v1
-      with:
-        files: site/index.html
-
-  test-site-gen:
-    if: github.head_ref == 'main'
-    name: Test actions-mn/cli/site-gen@${{ github.head_ref }} action on ${{ matrix.os }}
-    runs-on: ${{ matrix.os }}
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [ ubuntu-latest, windows-latest, macos-latest ]
-    steps:
-    - uses: actions/checkout@v3
-
-    - uses: actions/checkout@v3
-      with:
-        repository: metanorma/mn-samples-iso
-        path: iso
-
-    - uses: actions-mn/setup@master
-
-    - uses: actions-mn/cli/site-gen@main # context expression cannot be used instead main
-      with:
-        source-path: iso
-        config-file: metanorma.yml
-        agree-to-terms: true
-
-    - uses: andstor/file-existence-action@v1
-      with:
-        files: site/index.html
-
-  test-docker-site-gen:
-    if: github.head_ref == 'main'
-    name: Test actions-mn/cli/docker-site-gen@${{ github.head_ref }} action on ${{ matrix.os }}
-    runs-on: ${{ matrix.os }}
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [ ubuntu-latest ]
-    steps:
-    - uses: actions/checkout@v3
-
-    - uses: actions/checkout@v3
-      with:
-        repository: metanorma/mn-samples-iso
-        path: iso
-
-    - uses: actions-mn/setup@master
-
-    - uses: actions-mn/cli/docker-site-gen@main # context expression cannot be used instead main
-      with:
-        source-path: iso
-        config-file: iso/metanorma.yml
-        agree-to-terms: true
-
-    - uses: andstor/file-existence-action@v1
-      with:
-        files: site/index.html
-
   test-new:
     name: Test actions-mn/cli/new action on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
@@ -130,7 +20,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
-    - uses: actions-mn/setup@master
+    - uses: actions-mn/setup@main
 
     - uses: ./new/
       with:
@@ -148,91 +38,6 @@ jobs:
     - uses: andstor/file-existence-action@v1
       with:
         files: test/document.adoc, test/metanorma.yml
-
-  test-compile:
-    name: Test actions-mn/cli/compile action on ${{ matrix.os }}
-    runs-on: ${{ matrix.os }}
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [ ubuntu-latest, windows-latest, macos-latest ]
-    steps:
-    - uses: actions/checkout@v3
-
-    - uses: actions-mn/setup@master
-
-    - run: mkdir result1
-    - uses: ./compile/
-      with:
-        input-file: README.adoc
-        type: iso
-        extensions: html
-        output-dir: ./result1
-        no-install-fonts: true
-
-    - run: mkdir result2
-    - uses: ./compile/
-      with:
-        input-file: README.adoc
-        type: iso
-        extensions: doc
-        output-dir: result2
-        agree-to-terms: true
-
-    - uses: andstor/file-existence-action@v1
-      with:
-        files: result1/README.html, result2/README.doc
-
-  test-use-bundler:
-    name: Test actions-mn/cli actions on ${{ matrix.os }}
-    runs-on: ${{ matrix.os }}
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [ ubuntu-latest, windows-latest, macos-latest ]
-    steps:
-    - uses: actions/checkout@v3
-
-    - run: |
-        echo 'source "https://rubygems.org"' > Gemfile
-        echo 'gem "metanorma-cli"' >> Gemfile
-
-    - uses: ruby/setup-ruby@v1
-      with:
-        ruby-version: '2.7'
-        bundler-cache: true
-
-    - run: mkdir result
-    - uses: ./compile/
-      with:
-        input-file: README.adoc
-        type: iso
-        extensions: html
-        output-dir: ./result
-        no-install-fonts: true
-        use-bundler: true
-
-    - uses: ./new/
-      with:
-        type: iso
-        doctype: international-standard
-        output-path: test
-        use-bundler: true
-
-    - uses: actions/checkout@v3
-      with:
-        repository: metanorma/mn-samples-iso
-        path: iso
-
-    - run: bundle install
-      working-directory: iso
-
-    - uses: ./site-gen/
-      with:
-        source-path: iso
-        config-file: metanorma.yml
-        agree-to-terms: true
-        use-bundler: true
 
   test-setup-flavors:
     name: Test actions-mn/cli/setup-flavors@${{ github.head_ref }} action on ${{ matrix.os }}
