--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -39,7 +39,7 @@ jobs:
       with:
         files: test/document.adoc, test/metanorma.yml
 
-  test-setup-flavors:
+  test-setup-flavors-docker:
     name: Test actions-mn/cli/setup-flavors@${{ github.head_ref }} action on ${{ matrix.os }}
     runs-on: ubuntu-latest
     container:
@@ -86,3 +86,58 @@ jobs:
         source-path: bsi
         config-file: metanorma.yml
         agree-to-terms: true
+
+  test-setup-flavors:
+    name: Test actions-mn/cli/setup-flavors@${{ github.head_ref }} action on ${{ matrix.os }}
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        flavors:
+        - ribose
+        - bsi
+        - ribose bsi
+        - ribose bsi nist
+    steps:
+    - uses: actions/checkout@v3
+
+    - uses: ruby/setup-ruby@v1
+      with:
+        ruby-version: '3.1'
+
+    - run: gem install metanorma-cli
+
+    - if: contains(matrix.flavors, 'ribose')
+      uses: actions/checkout@v3
+      with:
+        repository: metanorma/mn-samples-ribose
+        path: ribose
+
+    - if: contains(matrix.flavors, 'bsi')
+      uses: actions/checkout@v3
+      with:
+        repository: metanorma/mn-samples-bsi
+        path: bsi
+        token: ${{ secrets.METANORMA_CI_PAT_TOKEN }}
+
+    - uses: ./setup-flavors
+      with:
+        extra-flavors: ${{ matrix.flavors }}
+        github-pakages-token: ${{ secrets.METANORMA_CI_PAT_TOKEN }}
+        use-bundler: false
+
+    - if: contains(matrix.flavors, 'ribose')
+      uses: actions-mn/site-gen@main
+      with:
+        source-path: ribose
+        config-file: metanorma.yml
+        agree-to-terms: true
+        use-bundler: false
+
+    - if: contains(matrix.flavors, 'bsi')
+      uses: actions-mn/site-gen@main
+      with:
+        source-path: bsi
+        config-file: metanorma.yml
+        agree-to-terms: true
+        use-bundler: false
